@@ -3245,7 +3245,8 @@ static Image *ReadDCMImage(const ImageInfo *image_info,ExceptionInfo *exception)
       (void) fclose(file);
       DestroyImage(image);
       clone_info=CloneImageInfo(image_info);
-      DetachBlob(clone_info->blob);
+      clone_info->blob=(void *) NULL;
+      clone_info->length=0;
       FormatString(clone_info->filename,"jpeg:%.1024s",filename);
       image=ReadImage(clone_info,exception);
       (void) remove(filename);
